--- a/src/styles/responsive.scss
+++ b/src/styles/responsive.scss
@@ -31,8 +31,13 @@
   .service .service_flex {
     flex-direction: column;
     align-items: center;
-    gap: 3rem;
+    // gap: 3rem;
   }
+
+  .service .service_flex .service_card {
+    margin-bottom: 3rem;
+  }
+
   .service .service_flex .service_card {
     max-width: 350px;
     margin-right: 0;
