--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -134,6 +134,7 @@ main {
       z-index: 100;
       img {
         z-index: 101;
+        transform: translateX(7%);
       }
     }
     .about_image::after {
@@ -142,7 +143,7 @@ main {
       bottom: 0;
       left: 0;
       background-color: var(--color_1);
-      width: 90%;
+      width: 100%;
       height: 60%;
       border-radius: 10px;
       z-index: 99;
@@ -296,6 +297,7 @@ main {
       display: flex;
       margin-bottom: 8rem;
       .sample_image {
+        border: 18px solid var(--color_1);
         margin-right: 4rem;
         flex: 1;
       }
@@ -389,9 +391,9 @@ main {
             outline: none;
             padding: 10px 20px;
             border-radius: 35px;
-            border: 1px solid rgb(255, 255, 255, 0.5);
-            border-right: 1px solid rgb(255, 255, 255, 0.2);
-            border-bottom: 1px solid rgb(255, 255, 255, 0.2);
+            // border: 1px solid rgb(255, 255, 255, 0.5);
+            // border-right: 1px solid rgb(255, 255, 255, 0.2);
+            // border-bottom: 1px solid rgb(255, 255, 255, 0.2);
             font-size: 16px;
             letter-spacing: 1px;
             color: #333;
@@ -406,9 +408,9 @@ main {
             outline: none;
             padding: 10px 20px;
             border-radius: 15px;
-            border: 1px solid rgb(255, 255, 255, 0.5);
-            border-right: 1px solid rgb(255, 255, 255, 0.2);
-            border-bottom: 1px solid rgb(255, 255, 255, 0.2);
+            // border: 1px solid rgb(255, 255, 255, 0.5);
+            // border-right: 1px solid rgb(255, 255, 255, 0.2);
+            // border-bottom: 1px solid rgb(255, 255, 255, 0.2);
             font-size: 16px;
             letter-spacing: 1px;
             color: #333;
