--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -90,9 +90,12 @@ main {
         }
       }
       p {
-        font-size: 40px;
+        font-size: 35px;
         font-weight: 500;
         margin-bottom: 92px;
+      }
+      button {
+        cursor: pointer;
       }
     }
     .showcase_image {
@@ -100,16 +103,23 @@ main {
       z-index: 100;
       flex: 5;
       position: relative;
-      img {
+      margin-left: 3rem;
+      .showcase_img {
         z-index: 101;
+        width: 400px;
+        height: 400px;
+        background-image: url("../svg/test2.svg");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
       }
       .showcase_blur {
         position: absolute;
-        bottom: -30%;
+        bottom: 0%;
         right: 25%;
         height: 300px;
         width: 406px;
-        background: var(--color_1);
+        // background: var(--color_1);
         filter: blur(100px);
         border-radius: 100%;
         z-index: 99;
@@ -128,13 +138,23 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
+    align-items: center;
+    margin-top: 3rem;
     .about_image {
       flex: 1;
       position: relative;
       z-index: 100;
-      img {
+      text-align: center;
+      display: flex;
+      justify-content: center;
+      .about_img {
         z-index: 101;
-        transform: translateX(7%);
+        width: 400px;
+        height: 400px;
+        background-image: url("../svg/test5.svg");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
       }
     }
     .about_image::after {
@@ -142,7 +162,7 @@ main {
       content: "";
       bottom: 0;
       left: 0;
-      background-color: var(--color_1);
+      // background-color: var(--color_1);
       width: 100%;
       height: 60%;
       border-radius: 10px;
@@ -173,6 +193,7 @@ main {
     margin-top: 5rem;
     padding-bottom: 5rem;
     .service_card {
+      width: 600px;
       background: var(--primary_background);
       // box-shadow: -1px 1px 1px rgba(4, 74, 255, 0.5);
       border-radius: 16px;
@@ -196,6 +217,22 @@ main {
             width: 100px;
             height: 100px;
             background-image: url("../svg/xml.svg");
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+          }
+          .service_xml1 {
+            width: 100px;
+            height: 100px;
+            background-image: url("../svg/device.svg");
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+          }
+          .service_xml2 {
+            width: 100px;
+            height: 100px;
+            background-image: url("../svg/film.svg");
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
@@ -269,8 +306,8 @@ main {
       }
       .service_text {
         h1 {
-          letter-spacing: 3px;
-          font-size: 1.6rem;
+          letter-spacing: 2.2px;
+          font-size: 1.3rem;
           font-weight: 500;
           margin-bottom: 1.5rem;
         }
@@ -295,11 +332,14 @@ main {
     margin-top: 10rem;
     .sample {
       display: flex;
+      align-items: center;
       margin-bottom: 8rem;
       .sample_image {
-        border: 18px solid var(--color_1);
         margin-right: 4rem;
         flex: 1;
+        img {
+          border: 18px solid var(--color_1);
+        }
       }
       .sample_text {
         flex: 1;
@@ -324,13 +364,17 @@ main {
           line-height: 1.6rem;
         }
         .sample_btns {
-          .primary_btn {
-            margin-right: 1rem;
+          .secondary_btn {
+            a {
+              text-decoration: none;
+              color: #000;
+            }
           }
         }
       }
     }
-    .sample:nth-child(2) {
+    .sample:nth-child(2),
+    .sample:nth-child(4) {
       .sample_image {
         order: 2;
       }
