--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -73,6 +73,9 @@ main {
     border-top-right-radius: 50%;
     transform: translateX(-50%);
   }
+  .container {
+    margin-top: 3rem;
+  }
   .showcase_flex {
     display: flex;
     align-items: center;
@@ -106,8 +109,8 @@ main {
       margin-left: 3rem;
       .showcase_img {
         z-index: 101;
-        width: 400px;
-        height: 400px;
+        width: 450px;
+        height: 450px;
         background-image: url("../svg/test2.svg");
         background-position: center;
         background-repeat: no-repeat;
