--- a/src/styles/responsive.scss
+++ b/src/styles/responsive.scss
@@ -46,7 +46,7 @@
   .project .project_container .sample {
     flex-direction: column;
     align-items: center;
-    margin-bottom: 8rem;
+    padding-bottom: 8rem;
   }
   .project .project_container .sample .sample_image {
     width: 600px;
