--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -96,6 +96,7 @@ main {
         font-weight: 500;
         margin-bottom: 52px;
         line-height: 1.4rem;
+        font-family: roboto;
       }
       button {
         cursor: pointer;
@@ -180,6 +181,7 @@ main {
         margin-bottom: 2rem;
         font-size: 1.1rem;
         line-height: 1.5rem;
+        font-family: roboto;
       }
     }
   }
@@ -365,6 +367,7 @@ main {
           font-size: 1rem;
           margin-bottom: 1rem;
           line-height: 1.6rem;
+          font-family: roboto;
         }
         .sample_btns_con {
           display: flex;
