--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -1,5 +1,10 @@
 @import "./variables.scss";
 
+@font-face {
+  font-family: roboto;
+  src: url(../fonts/Roboto/Roboto-Regular.ttf);
+}
+
 * {
   padding: 0;
   margin: 0;
